--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -489,7 +489,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: url("/resources/img/hero/hero.jpg") top center;
+  background: url("resources/img/hero/hero.jpg") top center;
   background: rgba(0, 0, 0, 0.6);
   position: absolute;
   bottom: 0;
