--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -483,7 +483,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url('resources/img/hero/hero.jpg') top center;
+  background-image: url("resources/img/hero/hero.jpg") top center;
   background-size: cover;
   position: relative;
 }
