--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -483,8 +483,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url("resources/img/hero/hero.jpg");
-  background-size: cover;
+  background-color: 0A9CD5;
   position: relative;
 }
 
