--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -483,7 +483,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-color: 0A9CD5;
+  background-image: url("hero.jpg";
   position: relative;
 }
 
