--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -483,7 +483,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url("hero.jpg");
+  background-image: url("resources/css/hero.jpg");
   background-size: cover;
   position: relative;
 }
