--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -484,6 +484,7 @@ h6 {
   width: 100%;
   height: 100vh;
   background-image: url('hero.jpg');
+  background-position: top center;
   background-size: cover;
   position: relative;
 }
