--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -515,7 +515,7 @@ h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("hero.jpg") top center;
+    background: url('hero.jpg') top center;
     background-size: cover;
     position: relative;
 }
